--- a/SourceCodes/Boilerplates/Application.Web.UI/Templates/Errors/404.html
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Templates/Errors/404.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript" src="/Scripts/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-	<!--[if lt IE 7]>
+	<!--[if lt IE 8]>
 		<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 	<![endif]-->
 
@@ -39,10 +39,10 @@
 	<script type="text/javascript" src="/Scripts/main.js"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-	<script>
+	<script type="text/javascript">
 		(function (b, o, i, l, e, r) {
 			b.GoogleAnalyticsObject = l;
-			b[l] || (b[l] = function () { (b[l].q = b[l].q || []).push(arguments) });
+			b[l] || (b[l] = function () { (b[l].q = b[l].q || []).push(arguments); });
 			b[l].l = +new Date;
 			e = o.createElement(i);
 			r = o.getElementsByTagName(i)[0];
