Added NuGet packages for jQuery and Twitter Bootstrap.

--- a/SourceCodes/Boilerplates/Application.Web.UI/Content/main.css
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Content/main.css
@@ -1,6 +1,11 @@
-﻿.chromeframe {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+﻿body {
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
+
+.chromeframe {
+	margin: 0.2em 0;
+	background: #ccc;
+	color: #000;
+	padding: 0.2em 0;
 }
