--- a/SourceCodes/Boilerplates/Application.Web.UI/Views/Shared/_Layout.cshtml
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Web.Optimization
+@{
 }
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -19,11 +20,11 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/apple-touch-icon-72x72.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/apple-touch-icon-114x114.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/apple-touch-icon-144x144.png" />
-
-	<link type="text/javascript" type="text/css" rel="stylesheet" href="~/Content/main.css" />
+	
+	@Styles.Render("~/Content/css")
 	@RenderSection("styles", required: false)
-
-	<script src="~/Scripts/modernizr-2.6.2.min.js"></script>
+	
+	@Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
 	<!--[if lt IE 8]>
@@ -34,8 +35,7 @@
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript">window.jQuery || document.write('<script src="~/Scripts/jquery-1.10.2.min.js"><\/script>')</script>
-	<script type="text/javascript" src="~/Scripts/plugins.js"></script>
-	<script type="text/javascript" src="~/Scripts/main.js"></script>
+	@Scripts.Render("~/bundles/js")
 	@RenderSection("scripts", required: false)
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
