--- a/SourceCodes/Boilerplates/Application.Web.UI/Views/Home/Index.cshtml
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Views/Home/Index.cshtml
@@ -1,7 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
-<p>Hello world! This is HTML5 Boilerplate.</p>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<h1>@Html.Raw(ViewBag.Title)</h1>
+		</div>
+	</div>
+	
+	<div class="row-fluid">
+		<div class="span12">
+			<p>Hello world! This is HTML5 Boilerplate.</p>
+		</div>
+	</div>
+</div>
