--- a/SourceCodes/Boilerplates/Application.Web.UI/Views/Home/Index.cshtml
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Views/Home/Index.cshtml
@@ -1,16 +1,13 @@
 ﻿@{
-	ViewBag.Title = "Index";
+	ViewBag.Title = "Web Application Boilerplate";
 }
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12">
-			<h1>@Html.Raw(ViewBag.Title)</h1>
-		</div>
-	</div>
-	
-	<div class="row-fluid">
-		<div class="span12">
-			<p>Hello world! This is HTML5 Boilerplate.</p>
+			<div class="hero-unit">
+				<h1>@Html.Raw(ViewBag.Title)</h1>
+				<h2>This provides basic structure to build a web application using ASP.NET MVC4.</h2>
+			</div>
 		</div>
 	</div>
 </div>
