Added jquery.validate plugin.

--- a/SourceCodes/Boilerplates/Application.Web.UI/Views/Shared/_Layout.cshtml
+++ b/SourceCodes/Boilerplates/Application.Web.UI/Views/Shared/_Layout.cshtml
@@ -41,8 +41,7 @@
 
 	@RenderBody()
 
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript">window.jQuery || document.write('<script src="~/Scripts/jquery-1.10.2.min.js"><\/script>')</script>
+	@Scripts.Render("~/bundles/jquery")
 	@Scripts.Render("~/bundles/bootstrap")
 	<!--[if lte IE 8]>
 		@Scripts.Render("~/bundles/es5-shim")
